[tool.poetry]
name = "hwave"
version = "0.1-dev"
description = "UHF"
authors = ["H-Wave developers <hwave-dev@issp.u-tokyo.ac.jp>"]
license = "GPL-3.0-or-later"

readme = "README.md"
repository = "https://github.com/issp-center-dev/H-Wave"

packages = [
  { include = "hwave", from = "src" }
  ]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.14"
scipy = "^1.7"
requests = "^2.28.1"
tomli = "^2.0.1"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
uhf = "hwave.qlms:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
